syntax = "proto3";

package golem.rib;

import "wasm/rpc/type.proto";
import "golem/rib/instance_type.proto";

message WorkerFunctionsInRib {
    repeated WorkerFunctionType function_calls = 1;
}

message WorkerFunctionType {
    golem.rib.FunctionNameType function_name = 1;
    repeated wasm.rpc.Type parameter_types = 2;
    optional wasm.rpc.Type return_type = 3;
}
